Fix: Disable horizontal scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
 }
 
 html, body {
-  @apply h-full;
+  @apply h-full overflow-x-hidden;
 }
 
 body {
